Attempts to fix menu buttons on mobile

--- a/src/components/cart/CartToggle/cart-toggle.scss
+++ b/src/components/cart/CartToggle/cart-toggle.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   min-width: var(--tap-min-size);
   min-height: var(--tap-min-size);
+  padding: 0;
   background-color: transparent;
   border-width: 0;
   border-radius: var(--border-radius-button);
