--- a/src/components/common/Navbar/navbar.scss
+++ b/src/components/common/Navbar/navbar.scss
@@ -31,6 +31,11 @@
 }
 
 .navbar__menu[data-store-button] {
+  display: flex;
+  align-items: center;
+  width: var(--tap-min-size);
+  height: var(--tap-min-size);
+  padding: 0;
   color: var(--color-text);
   background-color: transparent;
   border: 0;
